--- a/untitled.html
+++ b/untitled.html
@@ -36,15 +36,19 @@
               <div id="selectors">
                <select id="studySelector"><option value="0">Select a Study</option></select>
               <select id="imageSelector"><option value="0">Select an Image</option></select>
+              <select id="imageSelector"><option value="0">Select a Feature</option></select>
               </div>
             </div>
          </div>
          <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                <p>annotator info</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                <p>statistics</p>
+            </div>
+            <div class="col-md-4">
+               <p>metadata</p>
             </div>
          </div>
       </div>
