--- a/untitled.html
+++ b/untitled.html
@@ -34,9 +34,9 @@
          <div class="row">
             <div class="col-lg-12" id="viewer">
               <div id="selectors">
-               <select id="studySelector"><option value="0">Select a Study</option></select>
-              <select id="imageSelector"><option value="0">Select an Image</option></select>
-              <select id="imageSelector"><option value="0">Select a Feature</option></select>
+              <span class="selectorNum">1</span><select id="studySelector"><option value="0">Select a Study</option></select>
+              <span class="selectorNum">2</span><select id="imageSelector"><option value="0">Select an Image</option></select>
+              <span class="selectorNum">3</span><select id="imageSelector"><option value="0">Select a Feature</option></select>
               </div>
             </div>
          </div>
@@ -48,7 +48,7 @@
                <p>statistics</p>
             </div>
             <div class="col-md-4">
-               <p>metadata</p>
+               <p>clinical metadata</p>
             </div>
          </div>
       </div>
