--- a/untitled.html
+++ b/untitled.html
@@ -36,7 +36,7 @@
               <div id="selectors">
               <span class="selectorNum">1</span><select id="studySelector"><option value="0">Select a Study</option></select>
               <span class="selectorNum">2</span><select id="imageSelector"><option value="0">Select an Image</option></select>
-              <span class="selectorNum">3</span><select id="imageSelector"><option value="0">Select a Feature</option></select>
+              <span class="selectorNum">3</span><select id="featureSelector"><option value="0">Select a Feature</option></select>
               </div>
             </div>
          </div>
